tests/fixtures/openbanking.org.uk-account-info-openapi/expected/src/fern/errors/method_not_allowed_error.py


import typing

from ..core.api_error import ApiError


class MethodNotAllowedError(ApiError):
    def __init__(self, body: typing.Any, headers: typing.Optional[typing.Dict[str, str]] = None):
        super().__init__(status_code=405, headers=headers, body=body)
